--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "typescript": "^3.2.2"
   },
   "devDependencies": {
+    "@strong-roots-capital/list-tradingview-formats": "^1.0.2",
     "ava": "^1.0.0",
     "codecov": "^3.1.0",
     "husky": "^1.3.1",
     "nyc": "^13.1.0",
+    "ow": "^0.12.0",
     "tap-nyc": "^1.0.3",
     "ts-node": "^7.0.1",
     "typedoc": "^0.13.0",
