--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "ava": "ava -s -v",
     "watch:ava": "nodemon -e 'ts json' -x 'npm run ava || true'",
     "test": "nyc ava",
-    "test:tap": "nyc ava --tap | tap-nyc",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "watch:test": "nodemon -e 'ts json' -x 'npm test || true'",
     "typedoc": "typedoc",
@@ -19,13 +18,8 @@
     "push-and-publish": "npm run push-with-tags && npm publish"
   },
   "files": [
-    "dist/"
+    "dist/src/"
   ],
-  "husky": {
-    "hooks": {
-      "pre-push": "npm run typedoc && git add doc && (git commit -m 'Update documentation' || true)"
-    }
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/strong-roots-capital/is-tradingview-format.git"
@@ -45,21 +39,19 @@
   },
   "homepage": "https://github.com/strong-roots-capital/is-tradingview-format",
   "devDependencies": {
-    "@types/node": "^10.12.18",
-    "@strong-roots-capital/list-tradingview-formats": "^1.0.2",
-    "ava": "^1.0.0",
-    "codecov": "^3.1.0",
-    "husky": "^1.3.1",
-    "nyc": "^13.1.0",
-    "ow": "^0.12.0",
-    "tap-nyc": "^1.0.3",
-    "ts-node": "^7.0.1",
-    "typedoc": "^0.13.0",
-    "typedoc-plugin-markdown": "^1.1.20",
-    "typescript": "^3.2.2"
+    "@strong-roots-capital/list-tradingview-formats": "^1.0.5",
+    "@types/node": "^13.1.8",
+    "ava": "^3.0.0",
+    "codecov": "^3.6.1",
+    "npm-check-updates": "^4.0.1",
+    "nyc": "^15.0.0",
+    "ow": "^0.15.0",
+    "ts-node": "^8.6.2",
+    "typedoc": "^0.16.7",
+    "typedoc-plugin-markdown": "^2.2.16",
+    "typescript": "^3.7.5"
   },
   "ava": {
-    "compileEnhancements": false,
     "files": [
       "!dist/**/*.d.ts",
       "test/**/*.ts"
@@ -74,9 +66,6 @@
   "nyc": {
     "include": [
       "src/*.ts"
-    ],
-    "exclude": [
-      "typings"
     ],
     "extension": [
       ".ts"
