--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "@strong-roots-capital/is-tradingview-format",
     "version": "1.2.3",
     "description": "Test to determine if session is denoted in valid Trading View format",
-    "main": "dist/is-tradingview-format.js",
-    "types": "dist/is-tradingview-format.d.ts",
+    "main": "dist/src/is-tradingview-format.js",
+    "types": "dist/src/is-tradingview-format.d.ts",
     "scripts": {
         "prepublishOnly": "npm run compile",
         "compile": "npm run clean && tsc",
@@ -13,7 +13,7 @@
         "test": "nyc ava",
         "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
         "watch:test": "nodemon -e 'ts json' -x 'npm test || true'",
-        "typedoc": "typedoc",
+        "typedoc": "typedoc --plugin typedoc-plugin-markdown",
         "push-with-tags": "git push origin master && git push origin --tags",
         "push-and-publish": "npm run push-with-tags && npm publish"
     },
